2018-03-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version

2018-03-18  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/stats/random/random.h: No inheritance from RNGScope

2018-03-14  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/Rcpp-FAQ.Rmd: Correct a double-quote (thanks, Joris Meys)

2018-03-08  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.16
        * inst/NEWS.Rd: Release 0.12.16
        * inst/bib/Rcpp.bib: Release 0.12.16
        * vignettes/Rcpp.bib: Release 0.12.16
        * inst/include/Rcpp/config.h: Release 0.12.16

        * debian/*: Changes for Debian release of 0.12.16

2018-02-07  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/longlong.h: Revised and more general logic for long
        long on 64bit Windows etc via C++11 and as int64_t alias where possible

2018-03-01  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/sugar/functions/complex.h (Rcpp): Remove RCPP_HYPOT
        macro and use ::hypot() throught as it is provided with C99

        * inst/include/Rcpp/sugar/undoRmath.h: Also uncomment pythag here

2018-02-28  Dirk Eddelbuettel  <edd@debian.org>

        * inst/include/Rcpp/Rmath.h (R): Rf_pythag has been remove in R 2.14.0
        so comment-out the R::pythag wrapper (per request of Brian Ripley)

2018-02-26  Kevin Ushey  <kevinushey@gmail.com>

        * src/api.cpp: Always set / put RNG state when calling Rcpp function

2018-02-25  Dirk Eddelbuettel  <edd@debian.org>

        * vignettes/Rcpp.bib: Updated
        * inst/bib/Rcpp.bib: Idem

        * vignettes/Rcpp-FAQ.Rmd (Note): Expand conda answer by adding link

2018-02-14  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New minor version

2018-02-14  Kirill Müller  <krlmlr@mailbox.org>

        * R/Attributes.R: Code compiled with cppFunction() uses .Call instead
        of .Primitive(".Call"), #795
